since version 2.1.4 release
===========================
* add __dir__ method so dir(grb) returns grib keys.
* allow pygrib.open to open a path specified by a pathlib.Path object
  (issue #193, PR #204)
* allow pygrib.open to take an io.BufferedReader object as an argument
  (issue #83, PR #206)

version 2.1.4 (git tag v2.1.4rel)
================================
* move conftest.py to test dir (so tests can be run from there)
* add check-manifest test to github actions workflow.
* update some cartopy test scripts to remove deprecation warnings.
* move package under 'src' dir so import pygrib works in install dir.
* add windows and macos x tests.
* make sure gribmessage.__repr__ doesn't fail is shapeOfTheEarth parameter
  is missing (issue #177).
* move private eccodes dir inside 'share', so `import eccodes` doesn't import an empty package.

version 2.1.3 (git tag v2.1.3rel)
================================
* fix pygrib.get_definitions_path() so it works if set_definitions_path has not been called.
* add conftest.py to MANIFEST.in (issue #171)

version 2.1.2 (git tag v2.1.2rel)
================================
* use pytest-mpl for image comparison tests.
* change license to MIT.
* changes gribmessage.projparams['proj'] from 'cyl' to 'longlat'
  for non-projection projections (e.g. 'regular_ll'). Issue #167.
* reorganize to include eccodes definitions inside package 
  when wheels are build (PYGRIB_WHEEL env var is set).
  Add set_definitions_path/get_defintions_path module functions
  to get/reset ECCODES_DEFINITION_PATH.
* include binary wheels for linux in pypi release.
* add grid template definition for RAP grib files in binary wheels (issue #134).
  Not fully implemented, but at least file can be read (gridType=unknown, latlons 
  method doesn't yet work)..

version 2.1.1 (git tag v2.1.1rel)
=================================
* clean up docs.
* migrate examples in 'test' directory from basemap to cartopy.
* enable github actions for CI (PR #159).
