@@ -5,6 +5,7 @@ since version 2.1.4 release
   (issue #193, PR #204)
 * allow pygrib.open to take an io.BufferedReader object as an argument
   (issue #83, PR #206)
+* ensure that RuntimeError contains a message of type `str` (PR #212)
 
 version 2.1.4 (git tag v2.1.4rel)
 ================================
